# close_source_sol_wallet_pro

./: .env.example  README.md  package.json
.config/: validator.toml
app/src/app/: page.tsx
app/src/components/: OwnersPanel.tsx  ProposeModal.tsx  TransactionList.tsx  VaultHeader.tsx
app/src/hooks/: useVault.ts
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/security/: mod.rs
program/tests/: integration_tests.rs
scripts/: deploy.ts  setup-local.sh
sdk/: package.json  tsconfig.json
sdk/src/: constants.ts  index.ts  instructions.ts  utils.ts
