[package]
name = "sol-wallet"
version = "0.1.0"
edition = "2021"
description = "Multi-sig treasury vault — Solana SBF program"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_wallet"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
solana-program = "1.18"
thiserror = "1.0"

[dev-dependencies]
litesvm = "0.3"
solana-sdk = "1.18"
borsh = { version = "1.5", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

# Required for SBF compilation
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
